# Professor-Feathers

./: .gitignore  README.md  live_dual_knn_main.py  live_dual_knn_main_reworked.py  live_dual_knn_main_with_limits.py  live_main.py  live_ui.py  pyproject.toml  run_base_model_compare.py  run_knn_classifier.py  run_knn_experiments.py  run_knn_experiments_dual.py  show_feature_space.py  start_live_classification.py  start_recording.py
data/base_model_compare/: held_out_test_results.csv  knn_confusion_matrix.csv  knn_grid_search.csv  summary.json  svm_confusion_matrix.csv  svm_grid_search.csv
data/feature_space_selection/: README.txt
data/features/: PCA_dashboard_f0contour_sanity.txt  f0_contour_experiment_note.txt
data/knn_experiments/: experiment_metadata.json  grid_search_results.csv  summary.txt
data/knn_experiments_dual/: base_grid_search.csv  base_per_class_metrics.csv  base_test_accuracy.csv  base_test_metrics.csv  dynamic_grid_search.csv  dynamic_keyword_generalization.csv  dynamic_test_accuracy.csv  holdout_results.csv  summary.json
data/knn_experiments_dual2/: base_grid_search.csv  base_test_accuracy.csv  dynamic_test_accuracy.csv
data/knn_split/: feature_scaler.json  predictions.csv  run_summary.json  speaker_f0_statistics.json
data/manifests/: samples.jsonl
src/: audio.py  base_svm.py  collect.py  config.py  data_augmentation.py  dual_knn.py  endpointer.py  feature_core.py  feature_loading.py  feature_plotting.py  features.py  knn_utils.py  parrot_feedback.py  storage.py
src/features/: feature_core.py  feature_loading.py  feature_plotting.py  (+1 more)
(+13 files in other folders)
